Move webserver source into a subdirectory.

--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3
 RUN pip install -U Flask
-ADD hello.py ./
-CMD ["python", "hello.py"]
+WORKDIR /
+ADD ./src/ /src/
+CMD ["python", "/src/webserver.py"]
