Add database connection handling with dummy usage

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,7 +1,7 @@
 FROM postgres:11
-ENV POSTGRES_USER flittr
-ENV POSTGRES_PASSWORD flittr
-ENV POSTGRES_DB flittr
+ENV POSTGRES_USER codepage
+ENV POSTGRES_PASSWORD codepage
+ENV POSTGRES_DB codepage
 ENV PGDATA /var/lib/postgresql/data/pgdata
 VOLUME /var/lib/postgresql/data/pgdata
 
